--- a/Ecommerce/product_management/templates/base.html
+++ b/Ecommerce/product_management/templates/base.html
@@ -19,8 +19,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
         <!-- Libraries Stylesheet -->
-        <link href="{% static 'product_management/static/lib/lightbox/css/lightbox.min.css' %}" rel="stylesheet">
         <link href="{% static 'product_management/static/lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+        <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+        <link href="{% static 'product_management/static/lib/lightbox/css/lightbox.min.css' %}" rel="stylesheet">
 
 
         <!-- Customized Bootstrap Stylesheet -->
