--- a/Ecommerce/Learning_ORM_queries/templates/learning_orm_queries/index.html
+++ b/Ecommerce/Learning_ORM_queries/templates/learning_orm_queries/index.html
@@ -15,6 +15,8 @@
 
     {% for e in all_entry %}
         <h4>{{e | safe}}</h4>
+        <h4>{{e.pub_date}}</h4>
+        <h4>{{e.pk}}</h4>
     {% endfor %}
 {% endif %}
 
